Switched to official page actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,12 +2,13 @@ name: Build and Deploy Static Site
 
 on:
   workflow_dispatch:
+  push:
+    branches: [main]
   schedule:
     - cron: '30 18 * * 0'
-  # Test
 
 permissions:
-  contents: write
+  contents: read
   pages: write
   id-token: write
 
@@ -30,9 +31,18 @@ jobs:
       - name: Generate static site
         run: python generate_static.py
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./output
-          publish_branch: gh-pages
+          path: ./output
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
